# credits-rs

./: .env  Cargo.toml  Makefile  README.md  credits.proto
src/: credits.rs  credits_grpc.rs  eventstore.rs  main.rs  server.rs
