[package]
name = "credits"
version = "0.1.0"
authors = ["Asbjørn Clemmensen <ac@siteimprove.com>"]

[dependencies]
uuid = { version = "0.7", features = ["serde", "v4"] }
serde = "1.0.80"
serde_json = "1.0.32"
serde_derive = "1.0.80"
stopwatch = "0.0.7"
postgres = "0.15"
r2d2_postgres = "0.14.0"
r2d2 = "0.8.2"
chrono = { version = "0.4.6", features = ["serde"] }
dotenv = "0.13.0"
log = "0.4.5"
env_logger = "0.5.13"
grpcio = { version = "0.4", default-features = false, features = ["protobuf-codec"] }
protobuf = "~2.0"
futures = "*"